# purple-merit-assignment

./: .gitignore  README.md  main.py  orchestrator.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  data_analyst_agent.py  decision_agent.py  marketing_agent.py  pm_agent.py  risk_agent.py
data/: metrics.json  release_notes.md  user_feedback.json
tools/: __init__.py  anomaly_detector.py  metric_aggregator.py  sentiment_analyzer.py  trend_comparator.py
